--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1222474961932670"
+     crossorigin="anonymous"></script>
     <title>Macronutrient Calculator</title>
     <style>
         /* CSS styles */
