--- a/index.html
+++ b/index.html
@@ -158,7 +158,14 @@
 
 
 
-
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-1222474961932670"
+        data-ad-slot="your-ad-slot-id"
+        data-ad-format="auto"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
 
     <!-script->
